Examples/test-suite/errors/pp_deprecated_typedef_directive.i
%module xxx

/* Checks the deprecated %typedef directive warning is issued */
%typedef int MYINT;
